# rustscape

./: Cargo.toml  README.md
assets/mesh/buildings/: LargeSquareTower.glb  WatchTowerWRoof.glb  Well.glb
assets/mesh/creatures/: Rat.glb  Snake.glb
assets/mesh/nature/: BirchTree_1.glb  CommonTree_1.glb  CommonTree_4.glb  CommonTree_Dead_5.glb
assets/mesh/terrain/: Grass.glb  Grass2.glb  Grass3.glb  Hills.glb  TerrainTest1.glb.gltf  TerrainTest2.glb
assets/models/buildings/: Bridge.glb  Dummy.glb  LargeTower.glb  TallWall.glb  TallWallEntrance.glb  Target.glb  TargetWithArrows.glb
assets/models/creatures/: Casual_Male.glb  Male_Shirt.glb  Spider.glb
assets/models/nature/: CommonTree_2.glb  CommonTree_5.glb  CommonTree_Dead_1.glb  CommonTree_Dead_2.glb  CommonTree_Dead_4.glb  Plant_1.glb
assets/models/terrain/: dissected_terrain.glb  dissected_terrain_bumpy.glb  terrain_0_0.glb
assets/prefab/: player_prefab.ron  scene_prefab.ron
assets/prefabs/misc/: player_camera.ron
assets/ui/: fps_counter.ron  loading.ron
assets/world/: scene_prefab.ron
assets/world/buildings/: buildings.ron
assets/world/creatures/: creatures.ron
assets/world/lighting/: lighting.ron
assets/world/nature/: nature.ron
config/: display.ron
src/: main.rs
