[package]
name = "rustscape"
version = "0.1.0"
authors = ["wtblife@gmail.com"]
edition = "2018"

[dependencies]
amethyst = { path = "../amethyst", features = ["vulkan", "audio", "animation", "gltf"] }
serde = { version = "1.0.104", features = ["derive"] }
log = { version = "0.4.8", features = ["serde"] }
ncollide3d = "0.21.0"
oxygengine-navigation = "0.7.1"
gltf = "0.15.2"